memodif index.html dan style.css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- feather icons -->
     <script src="https://unpkg.com/feather-icons"></script>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -54,7 +54,7 @@
 
         <div class="row">
             <div class="about-img">
-                <img src="tentang-kami.jpg" alt="tentang kami">
+                <img src="img/tentang-kami.jpg" alt="tentang kami">
             </div>
                    
             <div class="content">
@@ -73,32 +73,32 @@
 
         <div class="row">
             <div class="menu-card">
-                <img src="menu.jpg" alt="espresso">
+                <img src="img/menu.jpg" alt="espresso">
                 <h3 class="menu-card-title">- espresso -</h3>
                 <p class="menu-card-price">IDR 15K</p>
             </div>
             <div class="menu-card">
-                <img src="menu.jpg" alt="espresso">
+                <img src="pmg/menu.jpg" alt="espresso">
                 <h3 class="menu-card-title">- espresso -</h3>
                 <p class="menu-card-price">IDR 15K</p>
             </div>
             <div class="menu-card">
-                <img src="menu.jpg" alt="espresso">
+                <img src="img.\/menu.jpg" alt="espresso">
                 <h3 class="menu-card-title">- espresso -</h3>
                 <p class="menu-card-price">IDR 15K</p>
             </div>
             <div class="menu-card">
-                <img src="menu.jpg" alt="espresso">
+                <img src="img/menu.jpg" alt="espresso">
                 <h3 class="menu-card-title">- espresso -</h3>
                 <p class="menu-card-price">IDR 15K</p>
             </div>
             <div class="menu-card">
-                <img src="menu.jpg" alt="espresso">
+                <img src="img/menu.jpg" alt="espresso">
                 <h3 class="menu-card-title">- espresso -</h3>
                 <p class="menu-card-price">IDR 15K</p>
             </div>
             <div class="menu-card">
-                <img src="menu.jpg" alt="espresso">
+                <img src="img/menu.jpg" alt="espresso">
                 <h3 class="menu-card-title">- espresso -</h3>
                 <p class="menu-card-price">IDR 15K</p>
             </div>
@@ -166,6 +166,6 @@
     </script>
 
     <!-- my java script -->
-    <script src="script.js" ></script>
+    <script src="java/script.js" ></script>
 </body>
 </html>
